--- a/pages/9814.html
+++ b/pages/9814.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -290,12 +290,11 @@ margin-left: 0em;
 
 <div class="navigation">
     <span class="skipNav"><a href='#navEnd'>Skip the Navigation Links</a> | </span>
-    <a href="/nlab/show/HomePage" accesskey="H" title="Home, Sweet Home">Home Page</a> | 
-    <a href="/nlab/list" accesskey="A" title="Alphabetically sorted list of pages">All Pages</a> | 
-    <a href="/nlab/latest_revisions" accesskey="U" title="View latest revisions on this web">Latest Revisions</a> |
-    <a href="/nlab/authors" title="Who wrote what">Authors</a> | 
-    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> | 
-    <a href="/nlab/export" accesskey="X" title="Download a zip with all the pages in this wiki">Export</a> |
+    <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
+    <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
+    <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
+    <a href="https://nforum.ncatlab.org/discussions/?CategoryID=0" title="Discuss this page on the nForum. It does not yet have a dedicated thread; feel free to create one, giving it the same name as the title of this page" style="color:black">Discuss this page</a> |
+    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
              onblur="this.value == '' ? this.value = 'Search' : true" /></fieldset>
@@ -308,26 +307,371 @@ margin-left: 0em;
 
 
 <div id="revision">
-    <p>A <a class='existingWikiWord' href='/nlab/show/sieve'>sieve</a> which is <a class='existingWikiWord' href='/nlab/show/covering'>covering</a>.</p>
+    <div class='rightHandSide'>
+<div class='toc clickDown' tabindex='0'>
+<h3 id='context'>Context</h3>
+
+<h4 id='topos_theory'>Topos Theory</h4>
+
+<div class='hide'>
+<p><strong><a class='existingWikiWord' href='/nlab/show/sheaf+and+topos+theory'>topos theory</a></strong></p>
+
+<ul>
+<li><a class='existingWikiWord' href='/nlab/show/Topos'>Toposes</a></li>
+</ul>
+
+<h2 id='background'>Background</h2>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/category+theory'>category theory</a></p>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/category'>category</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/functor'>functor</a></p>
+</li>
+</ul>
+</li>
+</ul>
+
+<h2 id='toposes'>Toposes</h2>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/%280%2C1%29-topos'>(0,1)-topos</a>, <a class='existingWikiWord' href='/nlab/show/Heyting+algebra'>Heyting algebra</a>, <a class='existingWikiWord' href='/nlab/show/locale'>locale</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/pretopos'>pretopos</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/topos'>topos</a></p>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Grothendieck+topos'>Grothendieck topos</a></p>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/category+of+presheaves'>category of presheaves</a></p>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/presheaf'>presheaf</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/representable+functor'>representable presheaf</a></p>
+</li>
+</ul>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/category+of+sheaves'>category of sheaves</a></p>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/site'>site</a></p>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/sieve'>sieve</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/coverage'>coverage</a>, <a class='existingWikiWord' href='/nlab/show/Grothendieck+pretopology'>pretopology</a>, <a class='existingWikiWord' href='/nlab/show/Grothendieck+topology'>topology</a></p>
+</li>
+</ul>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/sheaf'>sheaf</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/sheafification'>sheafification</a></p>
+</li>
+</ul>
+</li>
+</ul>
+</li>
+</ul>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/quasitopos'>quasitopos</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/base+topos'>base topos</a>, <a class='existingWikiWord' href='/nlab/show/indexed+topos'>indexed topos</a></p>
+</li>
+</ul>
+
+<h2 id='internal_logic'>Internal Logic</h2>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/categorical+semantics'>categorical semantics</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/internal+logic'>internal logic</a></p>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/subobject+classifier'>subobject classifier</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/natural+numbers+object'>natural numbers object</a></p>
+</li>
+</ul>
+</li>
+</ul>
+
+<h2 id='topos_morphisms'>Topos morphisms</h2>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/logical+functor'>logical morphism</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/geometric+morphism'>geometric morphism</a></p>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/direct+image'>direct image</a>/<a class='existingWikiWord' href='/nlab/show/inverse+image'>inverse image</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/global+section'>global sections</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/geometric+embedding'>geometric embedding</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/surjective+geometric+morphism'>surjective geometric morphism</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/essential+geometric+morphism'>essential geometric morphism</a></p>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/locally+connected+geometric+morphism'>locally connected geometric morphism</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/connected+topos'>connected geometric morphism</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/totally+connected+geometric+morphism'>totally connected geometric morphism</a></p>
+</li>
+</ul>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/%C3%A9tale+geometric+morphism'>étale geometric morphism</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/open+geometric+morphism'>open geometric morphism</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/proper+geometric+morphism'>proper geometric morphism</a>, <a class='existingWikiWord' href='/nlab/show/proper+geometric+morphism'>compact topos</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/separated+geometric+morphism'>separated geometric morphism</a>, <a class='existingWikiWord' href='/nlab/show/separated+geometric+morphism'>Hausdorff topos</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/local+geometric+morphism'>local geometric morphism</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/bounded+geometric+morphism'>bounded geometric morphism</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/base+change'>base change</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/localic+geometric+morphism'>localic geometric morphism</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/hyperconnected+geometric+morphism'>hyperconnected geometric morphism</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/atomic+geometric+morphism'>atomic geometric morphism</a></p>
+</li>
+</ul>
+</li>
+</ul>
+
+<h2 id='extra_stuff_structure_properties'>Extra stuff, structure, properties</h2>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/topological+locale'>topological locale</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/localic+topos'>localic topos</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/big+and+little+toposes'>petit topos/gros topos</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/locally+connected+topos'>locally connected topos</a>, <a class='existingWikiWord' href='/nlab/show/connected+topos'>connected topos</a>, <a class='existingWikiWord' href='/nlab/show/totally+connected+geometric+morphism'>totally connected topos</a>, <a class='existingWikiWord' href='/nlab/show/strongly+connected+topos'>strongly connected topos</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/local+geometric+morphism'>local topos</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/cohesive+topos'>cohesive topos</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/classifying+topos'>classifying topos</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/smooth+topos'>smooth topos</a></p>
+</li>
+</ul>
+
+<h2 id='cohomology_and_homotopy'>Cohomology and homotopy</h2>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/cohomology'>cohomology</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/homotopy+groups+in+an+%28infinity%2C1%29-topos'>homotopy</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/abelian+sheaf+cohomology'>abelian sheaf cohomology</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/model+structure+on+simplicial+presheaves'>model structure on simplicial presheaves</a></p>
+</li>
+</ul>
+
+<h2 id='in_higher_category_theory'>In higher category theory</h2>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/higher+topos+theory'>higher topos theory</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/%280%2C1%29-topos'>(0,1)-topos</a></p>
+
+<ul>
+<li><a class='existingWikiWord' href='/nlab/show/posite'>(0,1)-site</a></li>
+</ul>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/2-topos'>2-topos</a></p>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/2-site'>2-site</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/2-sheaf'>2-sheaf</a>, <a class='existingWikiWord' href='/nlab/show/stack'>stack</a></p>
+</li>
+</ul>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/%28infinity%2C1%29-topos'>(∞,1)-topos</a></p>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/%28infinity%2C1%29-site'>(∞,1)-site</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/%28infinity%2C1%29-sheaf'>(∞,1)-sheaf</a>, <a class='existingWikiWord' href='/nlab/show/infinity-stack'>∞-stack</a>, <a class='existingWikiWord' href='/nlab/show/derived+stack'>derived stack</a></p>
+</li>
+</ul>
+</li>
+</ul>
+
+<h2 id='theorems'>Theorems</h2>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Diaconescu%27s+theorem'>Diaconescu&#39;s theorem</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Barr%27s+theorem'>Barr&#39;s theorem</a></p>
+</li>
+</ul>
+<div>
+<p>
+  <a href='/nlab/edit/topos+theory+-+contents'>Edit this sidebar</a>
+</p>
+</div></div>
+</div>
+</div>
+
+<h1 id='contents'>Contents</h1>
+<div class='maruku_toc'><ul><li><a href='#definition'>Definition</a></li><li><a href='#related_concepts'>Related concepts</a></li></ul></div>
+<h2 id='definition'>Definition</h2>
+
+<p>A <a class='existingWikiWord' href='/nlab/show/sieve'>sieve</a> which is <a class='existingWikiWord' href='/nlab/show/covering'>covering</a>.</p>
+
+<h2 id='related_concepts'>Related concepts</h2>
+
+<ul>
+<li><a class='existingWikiWord' href='/nlab/show/local+epimorphism'>local epimorphism</a></li>
+</ul>
 
 <p>
 </p>
 </div>
 
 <div class="revisedby">
-  Created on May 29, 2013 13:50:54 
-  by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (89.204.153.151)
+  <p>
+  Last revised on July 16, 2018 at 12:31:48.
+  See the <a href="https://ncatlab.org/nlab/history/covering sieve" style="color: #005c19">history</a> of this page for a list of all contributions to it.
+  </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/covering+sieve" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
-  
+  <a href="/nlab/edit/covering+sieve" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/covering+sieve/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/covering+sieve" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/covering+sieve" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  | <a href="https://ncatlab.org/nlab/show/covering sieve/cite" style="color: black">Cite</a>
   <span class="views">
-    | Views: 
+    | Views:
     <a href="/nlab/print/covering+sieve" accesskey="p" id="view_print" rel="nofollow">Print</a>
-    | 
+    |
     <a href="/nlab/tex/covering+sieve" id="view_tex" rel="nofollow">TeX</a>
     |
     <a href="/nlab/source/covering+sieve" id="view_source" rel="nofollow">Source</a>
