--- a/pages/8038.html
+++ b/pages/8038.html
@@ -290,12 +290,11 @@ margin-left: 0em;
 
 <div class="navigation">
     <span class="skipNav"><a href='#navEnd'>Skip the Navigation Links</a> | </span>
-    <a href="/nlab/show/HomePage" accesskey="H" title="Home, Sweet Home">Home Page</a> | 
-    <a href="/nlab/list" accesskey="A" title="Alphabetically sorted list of pages">All Pages</a> | 
-    <a href="/nlab/latest_revisions" accesskey="U" title="View latest revisions on this web">Latest Revisions</a> |
-    <a href="/nlab/authors" title="Who wrote what">Authors</a> | 
-    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> | 
-    <a href="/nlab/export" accesskey="X" title="Download a zip with all the pages in this wiki">Export</a> |
+    <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
+    <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
+    <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
+    <a href="https://nforum.ncatlab.org/discussions/?CategoryID=0" title="Discuss this page on the nForum. It does not yet have a dedicated thread; feel free to create one, giving it the same name as the title of this page" style="color:black">Discuss this page</a> |
+    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
              onblur="this.value == '' ? this.value = 'Search' : true" /></fieldset>
@@ -771,7 +770,7 @@ margin-left: 0em;
 </li>
 
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/6d+%282%2C0%29-supersymmetric+QFT'>6d (2,0)-supersymmetric QFT</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/6d+%282%2C0%29-superconformal+QFT'>6d (2,0)-supersymmetric QFT</a></p>
 </li>
 </ul>
 </li>
@@ -904,7 +903,7 @@ margin-left: 0em;
 
 <p>In <a class='existingWikiWord' href='/nlab/show/quantum+field+theory'>quantum field theory</a> scattering amplitudes are the <a class='existingWikiWord' href='/nlab/show/probability+amplitude'>probability amplitudes</a> for processes of <a class='existingWikiWord' href='/nlab/show/scattering'>scattering</a> of <a class='existingWikiWord' href='/nlab/show/fundamental+particle'>fundamental particles</a> (or <a class='existingWikiWord' href='/nlab/show/string'>fundamental strings</a> etc.) off each other. The collection of scattering amplitudes forms the <em><a class='existingWikiWord' href='/nlab/show/S-matrix'>S-matrix</a></em>. In <a class='existingWikiWord' href='/nlab/show/perturbative+quantum+field+theory'>perturbative quantum field theory</a> its contributions may be labeled by <a class='existingWikiWord' href='/nlab/show/Feynman+diagram'>Feynman diagrams</a>, whence it is also called the <em><a class='existingWikiWord' href='/nlab/show/S-matrix'>Feynman perturbation series</a></em>.</p>
 
-<p>Of particular interest are <a class='existingWikiWord' href='/nlab/show/vacuum+amplitude'>vacuum amplitudes</a> which are scattering amplitudes “where nothing externel scatters” hence for no incoming and no outgoing states. The <a class='existingWikiWord' href='/nlab/show/loop+order'>1-loop</a> vacuum amplitudes are <a class='existingWikiWord' href='/nlab/show/regularization+%28physics%29'>regularized</a> <a class='existingWikiWord' href='/nlab/show/trace'>traces</a> over <a class='existingWikiWord' href='/nlab/show/Feynman+propagator'>Feynman propagators</a>. These are the incarnations of <a class='existingWikiWord' href='/nlab/show/zeta+function'>zeta functions</a>, <a class='existingWikiWord' href='/nlab/show/L-function'>L-functions</a> and <a class='existingWikiWord' href='/nlab/show/eta+invariant'>eta functions</a> in <a class='existingWikiWord' href='/nlab/show/physics'>physics</a>.</p>
+<p>Of particular interest are <a class='existingWikiWord' href='/nlab/show/vacuum+amplitude'>vacuum amplitudes</a> which are scattering amplitudes “where nothing external scatters” hence for no incoming and no outgoing states. The <a class='existingWikiWord' href='/nlab/show/loop+order'>1-loop</a> vacuum amplitudes are <a class='existingWikiWord' href='/nlab/show/regularization+%28physics%29'>regularized</a> <a class='existingWikiWord' href='/nlab/show/trace'>traces</a> over <a class='existingWikiWord' href='/nlab/show/Feynman+propagator'>Feynman propagators</a>. These are the incarnations of <a class='existingWikiWord' href='/nlab/show/zeta+function'>zeta functions</a>, <a class='existingWikiWord' href='/nlab/show/L-function'>L-functions</a> and <a class='existingWikiWord' href='/nlab/show/eta+invariant'>eta functions</a> in <a class='existingWikiWord' href='/nlab/show/physics'>physics</a>.</p>
 
 <h2 id='related_concepts'>Related concepts</h2>
 
@@ -1069,19 +1068,20 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on March 18, 2018 11:59:41 
-  by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (195.229.110.1)
+  <p>
+  Last revised on July 16, 2018 at 15:25:39.
+  See the <a href="https://ncatlab.org/nlab/history/scattering amplitude" style="color: #005c19">history</a> of this page for a list of all contributions to it.
+  </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/scattering+amplitude" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/scattering+amplitude/23" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(23 revisions)</span> | <a href="/nlab/show/diff/scattering+amplitude" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/scattering+amplitude" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
-  
+  <a href="/nlab/edit/scattering+amplitude" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/scattering+amplitude/25" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(25 revisions)</span> | <a href="/nlab/show/diff/scattering+amplitude" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/scattering+amplitude" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  | <a href="https://ncatlab.org/nlab/show/scattering amplitude/cite" style="color: black">Cite</a>
   <span class="views">
-    | Views: 
+    | Views:
     <a href="/nlab/print/scattering+amplitude" accesskey="p" id="view_print" rel="nofollow">Print</a>
-    | 
+    |
     <a href="/nlab/tex/scattering+amplitude" id="view_tex" rel="nofollow">TeX</a>
     |
     <a href="/nlab/source/scattering+amplitude" id="view_source" rel="nofollow">Source</a>
