--- a/pages/19458.html
+++ b/pages/19458.html
@@ -10,8 +10,8 @@
   <meta name="robots" content="index,follow" />
   
  
-  <link href="/stylesheets/instiki.css?1505574123" media="all" rel="stylesheet" type="text/css" />
-  <link href="/stylesheets/syntax.css?1505574123" media="all" rel="stylesheet" type="text/css" />
+  <link href="/stylesheets/instiki.css?1531905161" media="all" rel="stylesheet" type="text/css" />
+  <link href="/stylesheets/syntax.css?1531905161" media="all" rel="stylesheet" type="text/css" />
   <style type="text/css">
     h1#pageName, div.info, .newWikiWord a, a.existingWikiWord, .newWikiWord a:hover, [actiontype="toggle"]:hover, #TextileHelp h3 { 
       color: #008B26; 
@@ -208,13 +208,13 @@ margin-left: 0em;
     
     
   /*]]>*/--></style>
-  <script src="/javascripts/prototype.js?1505574123" type="text/javascript"></script>
-<script src="/javascripts/effects.js?1505574123" type="text/javascript"></script>
-<script src="/javascripts/dragdrop.js?1505574123" type="text/javascript"></script>
-<script src="/javascripts/controls.js?1505574123" type="text/javascript"></script>
-<script src="/javascripts/application.js?1505574123" type="text/javascript"></script>
-  <script src="/javascripts/page_helper.js?1505574123" type="text/javascript"></script>
-  <script src="/javascripts/thm_numbering.js?1505574123" type="text/javascript"></script>
+  <script src="/javascripts/prototype.js?1531905164" type="text/javascript"></script>
+<script src="/javascripts/effects.js?1531905164" type="text/javascript"></script>
+<script src="/javascripts/dragdrop.js?1531905164" type="text/javascript"></script>
+<script src="/javascripts/controls.js?1531905163" type="text/javascript"></script>
+<script src="/javascripts/application.js?1531905163" type="text/javascript"></script>
+  <script src="/javascripts/page_helper.js?1531905162" type="text/javascript"></script>
+  <script src="/javascripts/thm_numbering.js?1531905162" type="text/javascript"></script>
   
   <script type="text/x-mathjax-config">
   <!--//--><![CDATA[//><!--
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -406,8 +406,8 @@ margin-left: 0em;
 
 <p><strong>(enriched hom-functor)</strong></p>
 
-<p>For <math class='maruku-mathml' display='inline' id='mathml_edc1e43c5d2e9ed163bae2e803316561e7f66729_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>𝒱</mi></mrow><annotation encoding='application/x-tex'>\mathcal{V}</annotation></semantics></math> a <a class='existingWikiWord' href='/nlab/show/closed+monoidal+category'>closed</a> <a class='existingWikiWord' href='/nlab/show/symmetric+monoidal+category'>symmetric monoidal category</a> with all <a class='existingWikiWord' href='/nlab/show/limit'>limits</a> and <a class='existingWikiWord' href='/nlab/show/colimit'>colimits</a>, let <math class='maruku-mathml' display='inline' id='mathml_edc1e43c5d2e9ed163bae2e803316561e7f66729_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>𝒞</mi></mrow><annotation encoding='application/x-tex'>\mathcal{C}</annotation></semantics></math>, be a <math class='maruku-mathml' display='inline' id='mathml_edc1e43c5d2e9ed163bae2e803316561e7f66729_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>𝒱</mi></mrow><annotation encoding='application/x-tex'>\mathcal{V}</annotation></semantics></math>-<a class='existingWikiWord' href='/nlab/show/enriched+category'>enriched categories</a>. Then its <em><math class='maruku-mathml' display='inline' id='mathml_edc1e43c5d2e9ed163bae2e803316561e7f66729_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>𝒱</mi></mrow><annotation encoding='application/x-tex'>\mathcal{V}</annotation></semantics></math>-enriched hom-functor</em> is the <math class='maruku-mathml' display='inline' id='mathml_edc1e43c5d2e9ed163bae2e803316561e7f66729_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>𝒱</mi></mrow><annotation encoding='application/x-tex'>\mathcal{V}</annotation></semantics></math>-<a class='existingWikiWord' href='/nlab/show/enriched+functor'>enriched functor</a></p>
-<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_edc1e43c5d2e9ed163bae2e803316561e7f66729_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>𝒞</mi><mo stretchy='false'>(</mo><mo lspace='verythinmathspace' rspace='0em'>−</mo><mo>,</mo><mo lspace='verythinmathspace' rspace='0em'>−</mo><mo stretchy='false'>)</mo><mspace width='thickmathspace'></mspace><mo lspace='verythinmathspace'>:</mo><mspace width='thickmathspace'></mspace><msup><mi>𝒞</mi> <mi>op</mi></msup><mo>×</mo><mi>𝒞</mi><mo>⟶</mo><mi>𝒱</mi></mrow><annotation encoding='application/x-tex'>
+<p>For <math class='maruku-mathml' display='inline' id='mathml_0e7ea9cdbca0f68ed591e49a66d2e934626706fc_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>𝒱</mi></mrow><annotation encoding='application/x-tex'>\mathcal{V}</annotation></semantics></math> a <a class='existingWikiWord' href='/nlab/show/closed+monoidal+category'>closed</a> <a class='existingWikiWord' href='/nlab/show/symmetric+monoidal+category'>symmetric monoidal category</a> with all <a class='existingWikiWord' href='/nlab/show/limit'>limits</a> and <a class='existingWikiWord' href='/nlab/show/colimit'>colimits</a>, let <math class='maruku-mathml' display='inline' id='mathml_0e7ea9cdbca0f68ed591e49a66d2e934626706fc_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>𝒞</mi></mrow><annotation encoding='application/x-tex'>\mathcal{C}</annotation></semantics></math>, be a <math class='maruku-mathml' display='inline' id='mathml_0e7ea9cdbca0f68ed591e49a66d2e934626706fc_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>𝒱</mi></mrow><annotation encoding='application/x-tex'>\mathcal{V}</annotation></semantics></math>-<a class='existingWikiWord' href='/nlab/show/enriched+category'>enriched categories</a>. Then its <em><math class='maruku-mathml' display='inline' id='mathml_0e7ea9cdbca0f68ed591e49a66d2e934626706fc_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>𝒱</mi></mrow><annotation encoding='application/x-tex'>\mathcal{V}</annotation></semantics></math>-enriched hom-functor</em> is the <math class='maruku-mathml' display='inline' id='mathml_0e7ea9cdbca0f68ed591e49a66d2e934626706fc_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>𝒱</mi></mrow><annotation encoding='application/x-tex'>\mathcal{V}</annotation></semantics></math>-<a class='existingWikiWord' href='/nlab/show/enriched+functor'>enriched functor</a></p>
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_0e7ea9cdbca0f68ed591e49a66d2e934626706fc_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>𝒞</mi><mo stretchy='false'>(</mo><mo lspace='verythinmathspace' rspace='0em'>−</mo><mo>,</mo><mo lspace='verythinmathspace' rspace='0em'>−</mo><mo stretchy='false'>)</mo><mspace width='thickmathspace'></mspace><mo lspace='verythinmathspace'>:</mo><mspace width='thickmathspace'></mspace><msup><mi>𝒞</mi> <mi>op</mi></msup><mo>×</mo><mi>𝒞</mi><mo>⟶</mo><mi>𝒱</mi></mrow><annotation encoding='application/x-tex'>
   \mathcal{C}(-,-)
   \;\colon\;
   \mathcal{C}^{op} \times \mathcal{C}
@@ -415,12 +415,12 @@ margin-left: 0em;
   \mathcal{V}
 
 </annotation></semantics></math></div>
-<p>from the enriched <a class='existingWikiWord' href='/nlab/show/product+category'>product category</a> of <math class='maruku-mathml' display='inline' id='mathml_edc1e43c5d2e9ed163bae2e803316561e7f66729_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>𝒞</mi></mrow><annotation encoding='application/x-tex'>\mathcal{C}</annotation></semantics></math> with its enriched <a class='existingWikiWord' href='/nlab/show/opposite+category'>opposite category</a> to <math class='maruku-mathml' display='inline' id='mathml_edc1e43c5d2e9ed163bae2e803316561e7f66729_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>𝒱</mi></mrow><annotation encoding='application/x-tex'>\mathcal{V}</annotation></semantics></math>, canonically regarded as <a class='existingWikiWord' href='/nlab/show/enriched+category'>enriched</a> over itself, which sends <a class='existingWikiWord' href='/nlab/show/pair'>pairs</a> of <a class='existingWikiWord' href='/nlab/show/object'>objects</a> to the corresponding <a class='existingWikiWord' href='/nlab/show/hom-object'>hom-object</a> in <math class='maruku-mathml' display='inline' id='mathml_edc1e43c5d2e9ed163bae2e803316561e7f66729_9' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>𝒞</mi></mrow><annotation encoding='application/x-tex'>\mathcal{C}</annotation></semantics></math></p>
-<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_edc1e43c5d2e9ed163bae2e803316561e7f66729_10' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>c</mi> <mn>1</mn></msub><mo>,</mo><msub><mi>c</mi> <mn>2</mn></msub><mo>↦</mo><mi>𝒞</mi><mo stretchy='false'>(</mo><msub><mi>c</mi> <mn>1</mn></msub><mo>,</mo><msub><mi>c</mi> <mn>2</mn></msub><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>
+<p>from the enriched <a class='existingWikiWord' href='/nlab/show/product+category'>product category</a> of <math class='maruku-mathml' display='inline' id='mathml_0e7ea9cdbca0f68ed591e49a66d2e934626706fc_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>𝒞</mi></mrow><annotation encoding='application/x-tex'>\mathcal{C}</annotation></semantics></math> with its enriched <a class='existingWikiWord' href='/nlab/show/opposite+category'>opposite category</a> to <math class='maruku-mathml' display='inline' id='mathml_0e7ea9cdbca0f68ed591e49a66d2e934626706fc_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>𝒱</mi></mrow><annotation encoding='application/x-tex'>\mathcal{V}</annotation></semantics></math>, canonically regarded as <a class='existingWikiWord' href='/nlab/show/enriched+category'>enriched</a> over itself, which sends <a class='existingWikiWord' href='/nlab/show/pair'>pairs</a> of <a class='existingWikiWord' href='/nlab/show/object'>objects</a> to the corresponding <a class='existingWikiWord' href='/nlab/show/hom-object'>hom-object</a> in <math class='maruku-mathml' display='inline' id='mathml_0e7ea9cdbca0f68ed591e49a66d2e934626706fc_9' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>𝒞</mi></mrow><annotation encoding='application/x-tex'>\mathcal{C}</annotation></semantics></math></p>
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_0e7ea9cdbca0f68ed591e49a66d2e934626706fc_10' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>c</mi> <mn>1</mn></msub><mo>,</mo><msub><mi>c</mi> <mn>2</mn></msub><mo>↦</mo><mi>𝒞</mi><mo stretchy='false'>(</mo><msub><mi>c</mi> <mn>1</mn></msub><mo>,</mo><msub><mi>c</mi> <mn>2</mn></msub><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>
   c_1,c_2 \mapsto \mathcal{C}(c_1,c_2)
 
 </annotation></semantics></math></div>
-<p>and wich omn <a class='existingWikiWord' href='/nlab/show/hom-object'>hom-objects</a> of <math class='maruku-mathml' display='inline' id='mathml_edc1e43c5d2e9ed163bae2e803316561e7f66729_11' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>𝒞</mi> <mi>op</mi></msup><mo>×</mo><mi>𝒞</mi></mrow><annotation encoding='application/x-tex'>\mathcal{C}^{op} \times \mathcal{C}</annotation></semantics></math> is given by the evident pre- and post-<a class='existingWikiWord' href='/nlab/show/composition'>composition</a> operation.</p>
+<p>and wich omn <a class='existingWikiWord' href='/nlab/show/hom-object'>hom-objects</a> of <math class='maruku-mathml' display='inline' id='mathml_0e7ea9cdbca0f68ed591e49a66d2e934626706fc_11' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>𝒞</mi> <mi>op</mi></msup><mo>×</mo><mi>𝒞</mi></mrow><annotation encoding='application/x-tex'>\mathcal{C}^{op} \times \mathcal{C}</annotation></semantics></math> is given by the evident pre- and post-<a class='existingWikiWord' href='/nlab/show/composition'>composition</a> operation.</p>
 </div>
 
 <p>(e.g. <a href='#Borceux94'>Borceux 94, Prop. 6.2.7</a>)</p>
@@ -428,7 +428,21 @@ margin-left: 0em;
 <h2 id='related_concepts'>Related concepts</h2>
 
 <ul>
-<li><a class='existingWikiWord' href='/nlab/show/derived+hom-functor'>derived hom-functor</a></li>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/hom-set'>hom-set</a>, <a class='existingWikiWord' href='/nlab/show/hom-object'>hom-object</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/hom-functor'>hom-functor</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/enriched+hom-functor'>enriched hom-functor</a>, <a class='existingWikiWord' href='/nlab/show/internal+hom'>internal hom-functor</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/derived+hom-functor'>derived hom-functor</a></p>
+</li>
 </ul>
 
 <h2 id='references'>References</h2>
@@ -440,14 +454,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on July  7, 2018 at 13:04:41.
+  Last revised on July 19, 2018 at 13:26:58.
   See the <a href="https://ncatlab.org/nlab/history/enriched hom-functor" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/enriched+hom-functor" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/enriched+hom-functor/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/enriched+hom-functor" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/enriched+hom-functor" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/enriched+hom-functor" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/enriched+hom-functor/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/enriched+hom-functor" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/enriched+hom-functor" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/enriched hom-functor/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
